--- a/abstract-style.css
+++ b/abstract-style.css
@@ -4,6 +4,9 @@ ul,li{list-style: none;}
 a{
     text-decoration: none;
 }
+a:visited{
+    color:white;
+}
 body{
     width: 100%;
     background-color: #dadbf1;
@@ -11,7 +14,61 @@ body{
 header{
     width: 100%;
     height: 88px;
+    font-family: 'GT America Standard', sans-serif;
     background-color: #000000;
+}
+.company:hover{
+    color:#ccc;
+}
+.help-center:hover{
+    border-bottom: 3px solid white;
+}
+header li{
+    color:white;
+    float: left;
+    padding: 0 9px 0 9px;
+    border-right: 3px solid #fff;
+    font-size: 20px;
+    cursor: pointer;
+}
+header li:first-child{
+    padding-left:80px;
+    border-right: none;
+}
+header li:last-child{
+    border-right: none;
+}
+.left-nav{
+    float:left;
+    padding: 30px;
+}
+.right-nav{
+    padding: 25px 80px 0 0;
+    float: right;
+}
+.request button{
+    font-size: 20px;
+    color: white;
+    padding: 10px;
+    background-color: black;
+    border: 3px solid white;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.login button{
+    font-size: 20px;
+    padding: 10px;
+    color: white;
+    background-color: rgba(108, 108, 250, 0.941);
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+.login button:hover{
+    background-color:#fff;
+    color:black;
+    cursor: pointer;
+    transition: all 1s;
 }
 .search{
     margin: 0 auto;
@@ -110,7 +167,47 @@ header{
 }
 footer{
     width: 100%;
-    height: 342px;
+    height: 400px;
     background-color: #000000;
-    
+}
+footer button{
+    width: 100px;
+    height: 50px;
+    font-size: 20px;
+    font-family: 'GT America Standard', sans-serif;
+    border: 3px solid rgba(108, 108, 250);
+    border-radius: 20px;
+    background-color: rgb(108, 108, 250);
+    position: fixed;
+    bottom:10px;
+    right: 10px;
+    color: white;
+    cursor: pointer;
+}
+.foot_nav{
+    padding-top: 50px;
+    font-family: 'GT America Standard', sans-serif;
+    color:white;
+    display: grid;
+    grid-template-columns: 250px 250px 250px 250px;
+    justify-content: center;
+}
+.foot_nav h2{
+    padding-bottom:15px;
+    font-weight: bold;
+}
+.sub_nav li{
+    padding-bottom: 5px;
+    font-weight:300;
+}
+.copyright{
+    float:right;
+    padding: 0 10px 0 10px;
+    font-family: 'GT America Standard', sans-serif;
+    color: white;
+    font-weight: 500;
+}
+.copyright p{
+    font-size: 20px;
+    padding-bottom: 3px;
 }
